--- a/data/streamflow_data.qmd
+++ b/data/streamflow_data.qmd
@@ -27,8 +27,6 @@ gages<- df|>
     day = day(dateTime))|> 
   rename( cfs = Flow_Inst, Date = dateTime)|> 
   select(site_no,gage_name,Date,year,month,day,cfs)
-
-#write_csv(gages,"gages.csv")
 ```
 
 How can I add columns for average flow (cfs) from several days/a month prior to a specific date?
@@ -41,4 +39,5 @@ gages <- gages|>
     avg_30_prior = rollmean(cfs,30,na.pad = TRUE, align = "right"),
     avg_60_prior = rollmean(cfs,60,na.pad = TRUE, align = "right"),
     avg_10_prior = rollmean(cfs,10,na.pad = TRUE, align = "right"))
+write_csv(gages,"gages.csv")
 ```
