each qmd brings in data at the beginning to run independently

--- a/output/output_plots.qmd
+++ b/output/output_plots.qmd
@@ -200,6 +200,26 @@ p1+p2
 ```
 
 ###Suc dataset analysis
+```{r}
+#Bringing in data
+stream_sucralose <- sucralose_no_dup_blank|>
+  left_join(gages, join_by(Date,gage_name))|>
+  select(Date,gage_name,cfs,avg_10_prior,avg_30_prior,avg_60_prior,result_value,lab_qualifiers)
+
+sucralose <- sucralose_raw|>
+  mutate(add_column(sucralose_raw,
+    gage_name = case_when(
+      str_detect(sys_sample_code, "CM") ~ "Comal Springs",
+      str_detect(sys_sample_code, "SM") ~ "San Marcos Springs")))|>
+  relocate("gage_name",.before="Date")
+
+sucralose_no_dup <- subset(sucralose,duplicate == "N")
+sucralose_no_dup_blank <- subset(sucralose, blank == "N")
+
+false_pos <- sucralose|>
+  filter(detect_flag == "Y"& blank == "Y")
+```
+
 Do duplicate measurements match their original?
 ```{r}
 duplicates <- sucralose|>
