--- a/scripts/sucralose_analysis.qmd
+++ b/scripts/sucralose_analysis.qmd
@@ -6,7 +6,25 @@ execute:
   warning: false
   echo: true
 ---
+```{r}
+#Bringing in data
+stream_sucralose <- sucralose_no_dup_blank|>
+  left_join(gages, join_by(Date,gage_name))|>
+  select(Date,gage_name,cfs,avg_10_prior,avg_30_prior,avg_60_prior,result_value,lab_qualifiers)
 
+sucralose <- sucralose_raw|>
+  mutate(add_column(sucralose_raw,
+    gage_name = case_when(
+      str_detect(sys_sample_code, "CM") ~ "Comal Springs",
+      str_detect(sys_sample_code, "SM") ~ "San Marcos Springs")))|>
+  relocate("gage_name",.before="Date")
+
+sucralose_no_dup <- subset(sucralose,duplicate == "N")
+sucralose_no_dup_blank <- subset(sucralose, blank == "N")
+
+false_pos <- sucralose|>
+  filter(detect_flag == "Y"& blank == "Y")
+```
 How does avg sucralose vary throughout the months at each gage?
 ```{r}
 sucralose_plot <- sucralose|>
