--- a/output/poster_text.qmd
+++ b/output/poster_text.qmd
@@ -15,6 +15,8 @@ format: html
 
 Douglas B. Mawhinney, Robert B. Young, Brett J. Vanderford, Thomas Borch, and Shane A. Snyder Environmental Science & Technology 2011 45 (20), 8716-8722, <https://pubs.acs.org/doi/10.1021/es202404c>
 
+Jibin Li, Xuan Li, Yi Li, Huan Liu, Qilin Wang, Artificial sweeteners in wastewater treatment plants: A systematic review of global occurrence, distribution, removal, and degradation pathways, Journal of Hazardous Materials, Volume 494, 2025, 138644, ISSN 0304-3894, <https://doi.org/10.1016/j.jhazmat.2025.138644.> (<https://www.sciencedirect.com/science/article/pii/S0304389425015602)>
+
 Joan Oppenheimer, Andrew Eaton, Mohammad Badruzzaman, Ali W. Haghani, Joseph G. Jacangelo, Occurrence and suitability of sucralose as an indicator compound of wastewater loading to surface waters in urbanized regions, Water Research, Volume 45, Issue 13, 2011, Pages 4019-4027, ISSN 0043-1354, <https://doi.org/10.1016/j.watres.2011.05.014.> (<https://www.sciencedirect.com/science/article/pii/S0043135411002776)>
 
 Kathryn L. Linge, Yolanta Gruchlik, Francesco Busetti, Una Ryan, Cynthia A. Joll, Use of micropollutant indicator ratios to characterize wastewater treatment plant efficiency and to identify wastewater impact on groundwater, Journal of Environmental Management, Volume 358, 2024, 120822, ISSN 0301-4797, <https://doi.org/10.1016/j.jenvman.2024.120822.> (<https://www.sciencedirect.com/science/article/pii/S0301479724008089)>
@@ -24,3 +26,5 @@ Laura A. Richards, Rupa Kumari, Debbie White, Neha Parashar, Arun Kumar, Ashok G
 L.W. Herren, R.A. Brewton, L.E. Wilking, M.E. Tarnowski, M.A. Vogel, B.E. Lapointe, Septic systems drive nutrient enrichment of groundwaters and eutrophication in the urbanized Indian River Lagoon, Florida, Marine Pollution Bulletin, Volume 172, 2021, 112928, ISSN 0025-326X, <https://doi.org/10.1016/j.marpolbul.2021.112928.> (<https://www.sciencedirect.com/science/article/pii/S0025326X21009620)>
 
 W.D. Robertson, D.R. Van Stempvoort, J. Spoelstra, S.J. Brown, S.L. Schiff, Degradation of sucralose in groundwater and implications for age dating contaminated groundwater, Water Research, Volume 88, 2016, Pages 653-660, ISSN 0043-1354, <https://doi.org/10.1016/j.watres.2015.10.051.> (<https://www.sciencedirect.com/science/article/pii/S0043135415303158)>
+
+Yulong Yang, Zhanghua Liu, Huiming Zheng, Shicui Zhu, Kejia Zhang, Xueyan Li, Xiaoyan Ma, Andrea M. Dietrich, Sucralose, a persistent artificial sweetener in the urban water cycle: insights into occurrence, chlorinated byproducts formation, and human exposure, Journal of Environmental Chemical Engineering, Volume 9, Issue 4, 2021, 105293, ISSN 2213-3437, <https://doi.org/10.1016/j.jece.2021.105293.> (<https://www.sciencedirect.com/science/article/pii/S2213343721002700)>
